# radac-gmc300

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  app_info.xml  gmc.xml
.github/workflows/: ci.yml  codeql.yml  release.yml  tag-and-release.yml
docs/: BOINC-wrapper-reference.md  boinc-api-locations.md  boinc-xml-reference.md  build.md  extern-symbols.md  original-program-behaviour.md  phase2-config.md  phase3-protocol.md  phase4-server.md  phase5-data-flow.md  replace-radac-app.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  recovery-plan.md  systemPatterns.md  techContext.md
recovered/: README.md  app_io.h  boinc_wrapper.cpp  com_port.cpp  commands.cpp  config.cpp  config.h  constants.h  detector.cpp  init_data.h  main.cpp  main_app.cpp  safe_c.h  serial_port.cpp  serial_port.h  stubs_standalone.cpp  time_compat.h
